--- a/frontend/allocine/template/index.html
+++ b/frontend/allocine/template/index.html
@@ -25,13 +25,10 @@
 			</div>
 			<div class="menu">
 				<ul>
-					<li data-section="action">Action</li>
-					<li data-section="adventure">Aventure</li>
-					<li>Comédie</li>
-					<li>Thriller</li>
-					<li>Horreur</li>
-					<li>Science-fiction</li>
-					<li>Drame</li>
+					<li><a href="#" onclick="getMovies('now_playing')">En ce moment</a></li>
+					<li><a href="#" onclick="getMovies('popular')">Populaires</a></li>
+					<li><a href="#" onclick="getMovies('top_rated')">Mieux notés</a></li>
+					<li><a href="#" onclick="getMovies('upcoming')">Prochainement</a></li>
 				</ul>
 			</div>
 			<div class="movies">
